# OpenXM_contrib2

./: LICENSE  clean.bat  inst2000.bat  make2000.bat  send-tgz.bat
asir-gc/: Makefile.in  Makefile.vc  configure  configure.ac  gc-7.4.2-risa.diff  gc-8.0.6-risa.diff
asir2000/: ASIR_INSTALL  INSTALL  INSTALL.jp  Imakefile  Imakefile-gc6  LICENSE  Makefile.am  Makefile.in  Makefile.vc  Makefile.vc6  aclocal.m4  asir2000.dsp  asir2000.dsw  asir2000.in  asir2000.sln  asir2000.vcproj  configure  configure-xmkmf  configure.in  gc-7.0-risa.diff  gc-7.diff  gc6-risa.diff  gc6.5-risa.diff  gc6.8-risa.diff  gc6.diff  gc_interix.diff  gc_zeropage.diff
asir2000/asm/: Imakefile  Makefile.am  Makefile.in  asm4-2.s  asm4.s  asm45-2.s  asm45.s  asm5-2.s  asm5.s  asmalpha.c  asmiw.c  ddM.c  ddN.c  dos.s  edr-2.s  gf2m_mul_w.c  port.c  sparc-2.s-cc  sparc.c-cc  sparc.s-cc
asir2000/builtin/: Imakefile  Makefile.am  Makefile.in  al.c  algnum.c  algnum_ff.c  array.c  batch.c  bfaux.c  compobj.c  cplxnum.c  ctrl.c  dp-supp.c  dp.c  ec.c  fctr.c  file.c  ftab.c  funcs  gf.c  gr.c  help.c  iarray.c  int.c  isolv.c  itvnum.c  list.c  math.c  mattran.c  miscf.c  numerical.c  parif.c  pdiv.c  pf.c  poly.c  print.c  rat.c  reduct.c  result.c  round.c  (+8 more)
asir2000/engine/: A.c  C.c  D.c  E.c  EZ.c  Ebug.c  F.c  Fgfs.c  H.c  Hgfs.c  Imakefile  M.c  Makefile.am  Makefile.in  Mgfs.c  N.c  NEZ.c  Ngcd.c  P.c  PD.c  PDM.c  PM.c  PU.c  PUM.c  Q.c  QM.c  R.c  RU.c  Z.c  _distm.c  alg.c  bf.c  cplx.c  d-itv.c  dalg.c  dist.c  distm.c  f-itv.c  gf2n.c  gfpn.c  (+30 more)
asir2000/engine-27/: Imakefile  N-27.c  asm5-2-27.s  asmalpha-27.c  asmi-27.s  asmi_l-27.s  asmiw-27.c  ddN-27.c  edr-2-27.s  igcdhack.c  sparc-2-27.s-cc
asir2000/fep/: Makefile  fep.1  fep_alias.c  fep_funcs.c  fep_funcs.h  fep_glob.h  fep_main.c  fep_set.c  fep_stat.h
asir2000/fft/: Imakefile  Makefile.am  Makefile.in  dft.c  dft.h  fft_primes.c  polmul.c
asir2000/gc/: Imakefile  acinclude.m4  alloc.c  configure  configure.in  gc_risa.c  gcconfig.h  misc.c  os_dep.c  reclaim.c
asir2000/gc5.3/: Imakefile  alloc.c  dyn_load.c  gc_risa.c  gcconfig.h  gcconfig.h.linux  os_dep.c
asir2000/include/: Imakefile  Makefile.am  Makefile.in  Risa.tmpl  Risa.tmpl-alpha  al.h  b.h  base.h  bf.h  ca-27.h  ca.h  ca.h.itv  com.h  config.h  config.h-dist  inline.h  interval.h  itv-pari.h  ox.h  prime.h  version.h  wsio.h
asir2000/io/: Imakefile  Makefile.am  Makefile.in  biovar.c  bload.c  bsave.c  cio.c  cpexpr.c  des.c  io.c  io_win_mini.c  ox.c  ox.c-gc6  ox_asir.c  ox_launch.c  pexpr.c  pexpr_body.c  sio.c  spexpr.c  tcpf.c  tcpf_win_mini.c  ws_fileio.c
asir2000/lib/: Imakefile  Makefile.am  Makefile.in  alpi  bfct  bgk  const  cyclic  de  defs.h  dfff  dmul  dmul102  fctrdata  fctrtest  fff  glib  gr  help-eg.tgz  help-eg.uu  help-jp.tgz  help-jp.uu  html-eg.tgz  html-eg.uu  html-jp.tgz  html-jp.uu  ifplot  katsura  launch  mat  nf  num  primdec  primdec_lex  primdec_mod  ratint  robot  solve  sp  sturm  (+3 more)
asir2000/old/: Imakefile  configure  io.ox.c  parse.Imakefile
asir2000/parse/: Imakefile  Imakefile-gc6  Makefile.am  Makefile.in  arith.c  asir2000_dummy.c  asir_lib.c  asir_sm.c  asir_sm_main.c  comp.c  comp.h  compile.c  cpp.c  cpp.h  debug.c  eval.c  evall.c  function.c  gc_risa.c  glob.c  history.c  id.c  kwd.c  lex.c  load.c  main.c  parse.h  parse.y  parser.c  puref.c  pvar.c  quote.c  stdio.c  struct.c  util.c  w_stdio.h  xdeb.c  y.tab.c  ytab.c  ytab.h  (+1 more)
asir2000/plot/: Imakefile  Makefile.am  Makefile.in  calc.c  cursor.h  if.c  ifplot.h  ox_plot.c  ox_plot_xevent.c  plotf.c  plotg.c  plotp.c  smoothing.c
asir2018/: INSTALL  INSTALL.jp  LICENSE  Makefile.am  Makefile.in  Makefile.vc  configure  configure.ac  configure.in  gc-7.4.2-risa.diff  gc-7.diff  gc6.diff  gc_sparc64.diff
asir2018/asm/: Makefile.am  Makefile.in  asm4-2.s  asm4.s  asm45-2.s  asm45.s  asm5-2.s  asm5.s  asmalpha.c  asmi.s  asmi_l.s  asmiw.c  ddM.c  edr.s  gf2m_mul_w.c  nn_gf2m_mul_11.s  port.c  sparc-2.s-cc  sparc.s-cc
asir2018/builtin/: Makefile.am  Makefile.in  al.c  algnum.c  array.c  batch.c  batch.c.fork  bfaux.c  compobj.c  cplxnum.c  ctrl.c  dp-supp.c  dp.c  ec.c  fctr.c  file.c  ftab.c  gf.c  gr.c  help.c  iarray.c  int.c  isolv.c  itvnum.c  list.c  math.c  mattran.c  miscf.c  numerical.c  parif.c  pdiv.c  pf.c  poly.c  print.c  rat.c  reduct.c  result.c  round.c  sha1.c  strobj.c  (+6 more)
asir2018/engine/: A.c  C.c  D.c  E.c  EZ.c  Ebug.c  F.c  Fgfs.c  H.c  Hgfs.c  M.c  Makefile.am  Makefile.in  Mgfs.c  N.c  NEZ.c  P.c  PD.c  PDM.c  PM.c  PU.c  PUM.c  Q.c  QM.c  R.c  RU.c  _distm.c  alg.c  bf.c  c  cplx.c  d-itv.c  dalg.c  dist.c  distm.c  f-itv.c  gf2n.c  gfpn.c  gfs.c  gfspn.c  (+22 more)
asir2018/fft/: Makefile  Makefile.am  Makefile.in  dft.c  dft.h  fft_primes.c  polmul.c
asir2018/include/: Makefile  Makefile.am  Makefile.in  al.h  b.h  base.h  bf.h  ca-27.h  ca.h  com.h  config.h-dist  inline.h  interval.h  itv-pari.h  ox.h  prime.h  version.h  wsio.h
asir2018/io/: Makefile.am  Makefile.in  biovar.c  bload.c  bsave.c  cio.c  cpexpr.c  des.c  io.c  io_win_mini.c  ox.c  ox_asir.c  ox_launch.c  pexpr.c  pexpr_body.c  sio.c  spexpr.c  tcpf.c  tcpf_win_mini.c  ws_fileio.c
asir2018/lib/: Makefile.am  Makefile.in  alpi  bfct  bgk  const  cyclic  defs.h  dfff  dmul  dmul102  fctrdata  fctrtest  fff  glib  gr  help-en.uu  help-ja.uu  ifplot  katsura  launch  mat  nf  num  primdec  primdec_lex  primdec_mod  ratint  robot  solve  sp  sturm  weight  xm
asir2018/old/: gc6-risa.diff
asir2018/parse/: Makefile.am  Makefile.in  arith.c  comp.c  comp.h  cpp.c  cpp.h  debug.c  eval.c  evall.c  function.c  gc_risa.c  glob.c  kwd.c  lex.c  load.c  main.c  parse.h  parse.y  parser.c  puref.c  pvar.c  quote.c  stdio.c  struct.c  util.c  w_stdio.h  xdeb.c  ytab.c  ytab.h
asir2018/plot/: Makefile.am  Makefile.in  calc.c  cursor.h  if.c  ifplot.h  nox_memory.c  nox_plotp.c  nox_stub.c  ox_plot.c  ox_plot_xevent.c  plotf.c  plotg.c  plotp.c  smoothing.c
asirgui_qt/: CMakeLists.txt  README.md
asirgui_qt/core/: AppConfig.cpp  AppConfig.h  AsirEngine.h  CommandHistory.cpp  (+3 more)
fep/: fep.1  (+16 more)
(+211 files in other folders)
